--- a/cottonDiseasePredictionResnet152V2.ipynb
+++ b/cottonDiseasePredictionResnet152V2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transfer Learning Inception V3 using Keras"
+    "## Transfer Learning Resnet152V2 using Keras"
    ]
   },
   {
@@ -1467,7 +1467,7 @@
    "source": [
     "# fit the model\n",
     "# Run the cell. It will take some time to execute\n",
-    "r = model.fit_generator(\n",
+    "r = model.fit(\n",
     "  training_set,\n",
     "  validation_data=test_set,\n",
     "  epochs=20,\n",
